welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: not found: type c
def FaireCoin(Color:c) {
                    ^PatternPicture:2: error: not found: value c
  setCouleurBrosse(c)
                   ^