welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def FaireCoin(Color:c) {
  setCouleurBrosse(c)
  avance()
  baisseBrosse(); leveBrosse()
  gauche()
  avance()
  gauche()
  avance()
  baisseBrosse(); leveBrosse()
  gauche()
  avance()
  gauche()
  avance(); avance(); avance()
  gauche()
}

def motif() {
  FaireCoin(Color.RED)
  FaireCoin(Color.BLUE)
  FaireCoin(Color.GREEN)
  FaireCoin(Color.YELLOW)
}

override def run() {
  motif()
  avance(); avance(); avance(); avance()
  motif()
  avance(); avance(); avance(); avance()
  gauche()
  avance(); avance(); avance(); avance()
  droite()
}